--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ table {
 
 .footer-column input {
     width: 100%;
-    padding: 0.5em 0 0;
+    padding: 0.25em 0;
     font-family: "Vazir";
 }
 
