--- a/style.css
+++ b/style.css
@@ -483,3 +483,21 @@ table {
     background: #4285F4;
     transition: 0.2s ease-in-out;
 }
+
+.side-ad {
+    margin: 0.5em 0;
+    background: #FFF;
+    box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+    border-radius: 30px 30px 30px 0;
+    transition: 0.25s ease-in-out;
+}
+
+.side-ad a {
+    display: block;
+    padding: 2em;
+}
+
+.side-ad:hover{
+    background: #E2E2E6;
+    transition: 0.25s ease-in-out;
+}
