--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ table {
     background: #FFF;
     border: 0.3em solid #A6D343;
     box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+    overflow: hidden;
 }
 
 .post-ads a {
@@ -225,6 +226,7 @@ table {
     background: #FFF;
     box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
     border-radius: 2px;
+    overflow: hidden;
 }
 
 .side-ads a {
