update index.html and style.css
Some menus have to be gone. Because we don't need them in mobile version. also footer elements are now in one column. I also added .site-menu class. site-menu class make me able to hide it from mobile users because I set it's display to none

--- a/style.css
+++ b/style.css
@@ -585,4 +585,29 @@ table {
         text-align: center;
     }
     
+    .site-menu {
+        display: none;
+    }
+
+    .social-icons {
+        display: none;
+    }
+
+    .tab-menu {
+        display: none;
+    }
+
+    .footer-row {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-column {
+        width: 100%;
+    }
+
+    .footer-column h2 {
+        text-align: center;
+    }
 }
