--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ table {
 .post-card {
     display: flex;
     flex-direction: column;
-    margin: 2em 0;
+    margin: 0 0 1em;
     background: #FFF;
     box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
     border-radius: 2px;
