--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ table {
     background: #FFF;
     box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
     border-radius: 2px;
+    overflow: hidden;
 }
 
 .post-header {
@@ -657,5 +658,9 @@ table {
 
     .mobile-menu li:last-child {
         margin-bottom: 1em;
+    }
+
+    .post-card {
+        line-height: 2em;
     }
 }
