--- a/css/single.css
+++ b/css/single.css
@@ -136,3 +136,86 @@
     background: hsl(4, 89%, 40%);
     transition: 0.2s ease-in-out;
 }
+
+.relative-posts h2 {
+    padding: 1em 1em 0;
+    font-size: 1.1em;
+}
+
+.relative-posts hr {
+    width: 100%;
+    border: 1px solid hsl(240, 7%, 89%);
+}
+
+.relative-posts ul {
+    margin-bottom: 1em;
+}
+
+.relative-posts ul > li > a {
+    display: block;
+    padding: 1em;
+    font-size: 0.9em;
+}
+
+.comments-section {
+
+}
+
+.comments-section h2 {
+    font-size: 1.1em;
+    padding: 1em;
+}
+
+.comments-section hr {
+    width: 100%;
+    border: 1px solid #E2E2E6;
+}
+
+.comments-section .comment-form {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+}
+
+.comment-form label {
+    padding: 0.5em 0;
+}
+
+.comment-form textarea {
+    width: 70%;
+    font-family: "Vazir", Arial, Helvetica, sans-serif;
+    border: none;
+    border-bottom: 1px solid #E2E2E6;
+    border-radius: 5px;
+    transition: 0.2s ease-in-out;
+}
+
+.comment-form textarea:hover {
+    border-bottom: 1px solid #9933CC;
+    transition: 0.2s ease-in-out;
+}
+
+.comment-form .input {
+    width: 70%;
+    font-family: "Vazir", Arial, Helvetica, sans-serif;
+    border: none;
+    border-bottom: 1px solid #E2E2E6;
+    border-radius: 5px;
+    transition: 0.2s ease-in-out;
+}
+
+.comment-form .input:hover {
+    border-bottom: 1px solid #9933CC;
+    transition: 0.2s ease-in-out;
+}
+
+#send-comment-btn { 
+    margin: 2em 0 1em;
+    font-family: "Vazir", Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    background: #4285F4;
+    color: #FFF;
+    border: none;
+    padding: 1em;
+    font-size: 1.01em;
+}
