--- a/style.css
+++ b/style.css
@@ -504,17 +504,19 @@ table {
     color: dodgerblue;
 }
 
-.footer-column input {
+.footer-column input{
     width: 100%;
-    padding: 0.25em 0;
+    padding: 0.5rem;
     margin: 0.6em 0;
     font-family: "Vazir";
+    border-radius: 0.2rem;
 }
 
 .footer-column textarea {
     width: 100%;
-    padding: 0.5em;
+    padding: 0.5rem;
     font-family: "Vazir";
+    border-radius: 0.2rem;
 }
 
 .news {
