Fix typo in comment: Foundamental variable -> Foundamental variables

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     font-style: normal;
 }
 
-/* Foundamental variable */
+/* Foundamental variables */
 :root {
     --primary-color: #1e90ff;
     --secondary-color: #494D61;
